# SoftRenderer

./: CMakeLists.txt  README.md  render.cpp
include/SoftRenderer/: Camera.h  Geometry.h  Image.h  Material.h  Math.h  Renderer.h  Scene.h
results/: cornell_box.ppm  thinlen_focus_left.ppm  thinlen_focus_mid.ppm  thinlen_focus_right.ppm
